--- a/style.css
+++ b/style.css
@@ -1,8 +1,34 @@
 body {
-    background-color: dimgray;
+    margin: 10;
+    /*display: flex;*/
+    width: auto;
+    height: auto;
+    background-color: rgb(44, 44, 44);
     color: antiquewhite;
+    align-items: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
 h1 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
+.name_header {
+    margin: 20px;
+    padding: 10px;
+    border: 2px solid darkslategray;
+    border-radius: 15px;
+    background-color: rgb(19, 51, 46);
+    text-align: center;
+    width: 500px;
+}
+
+.contact_div {
+    margin: 20px;
+    padding: 10px;
+    border: 2px solid darkslategray;
+    border-radius: 15px;
+    background-color: rgb(19, 51, 46);
+    text-align: center;
+    width: 500px;
 }
